tests/suite/fail/regression/fuzz/fuzz_garbage_100.ny
fn main() { let x = @100 } //~ ERROR
